--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,15 @@
-h1 {
-    color: blue;
-    text-align: center;
+body {
+    font-family: 'Anton', sans-serif;
 }
-h3 {
-    color: green;
-    text-decoration: underline;
-    font-style: italic;
-    font-weight: bold;
+.product {
+    border-bottom: 1px solid gray;
+    padding: 8px 0;
 }
-.zmiana {
-    color: brown;
-}
-p {
-   margin: 20px 0;
+.product__title {
+    margin: 0;
 }
 
-.italicP {
+.product__description {
     font-style: italic;
+    font-size: 11px;
 }
-
-p::first-letter {
-    font-size: 18px;
-    font-weight: bold;
-  }
