--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,10 @@ body {
     font-family: 'Anton', sans-serif;
 }
 .product {
+    display: flex;
+    flex-direction: row;
     border-bottom: 1px solid gray;
-    padding: 8px 0;
+    padding: 8px 8px;
 }
 .product__title {
     margin: 0;
@@ -11,5 +13,33 @@ body {
 
 .product__description {
     font-style: italic;
-    font-size: 11px;
+    font-size: 12px;
+}
+
+.container {
+    background-color: gray;
+    width: 100vw;
+    height: 100%;
+    min-height: 100vh;
+    justify-content: center;
+    display: flex;
+}
+
+.section{
+    background-color: white;
+}
+
+@media(min-width: 760px) {
+    .section {
+        max-width: 75%;
+    }
+}
+
+.product__info {
+    margin: 8px;
+}
+
+.product__image {
+    width: 128px;
+    height: 128px;
 }
