--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,57 @@
 body {
-    font-family: 'Anton', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #E0E0E0;
 }
+
+.title {
+  font-family: 'Lobster', cursive;
+  font-size: 44px;
+  color: #1E88E5;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  background-color: white;
+  padding: 16px;
+  border-radius: 4px;
+}
+
+@media (min-width: 860px) {
+  .card {
+    max-width: 75%;
+  }
+}
+
 .product {
-    display: flex;
-    flex-direction: row;
-    border-bottom: 1px solid gray;
-    padding: 8px 8px;
+  border-bottom: 1px solid grey;
+  padding: 8px 0;
 }
-.product__title {
-    margin: 0;
+
+.product:first-of-type {
+  padding-top: 0;
+}
+
+.product:last-of-type {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.product__name {
+  font-size: 24px;
+}
+
+.product__price {
+  font-size: 19px;
 }
 
 .product__description {
-    font-style: italic;
-    font-size: 12px;
+  margin-top: 8px;
+  font-style: italic;
 }
 
 .container {
@@ -42,4 +80,22 @@ body {
 .product__image {
     width: 128px;
     height: 128px;
+}
+
+.card{
+    background-color: white;
+    padding: 16px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+}
+
+#search-input{
+    font-size: 18px;
+}
+
+.button{
+    background: #1e88e5;
+    border: none;
+    color: white;
+    font-size: 18px;
 }
